--- a/Hackathon2018/client/views/Index.html
+++ b/Hackathon2018/client/views/Index.html
@@ -1,6 +1,6 @@
 <head>
-    <link rel="Stylesheet" href="./stylesheet.css">
-    <script type="text/javascript" src="./DropDown.js"></script>
+    <link rel="Stylesheet" href="../stylesheets/Stylesheet.css">
+    <script type="text/javascript" src="../javascripts/DropDown.js"></script>
 </head>
 
 <header class="page-header">
@@ -16,58 +16,10 @@
 <main>
     <ul>
         <li><a class="active" href="Index.html">Home</a></li>
-        <li><a href="">Transactions</a></li>
-        <li><a href="">Data</a></li>
-        <li><a href="">Analytics</a></li>
+        <li><a href="Transactions.html">Transactions</a></li>
+        <li><a href="Data.html">Data</a></li>
+        <li><a href="Analytics.html">Analytics</a></li>
     </ul>
-    <br>
-    <br>
-    <form>
-        Income/Expense
-        <select>
-            <option>Income</option>
-            <option>Expense</option>
-        </select>
-        <br>
-        <br>
-        Amount:
-        <input name="Amount" type="Text">
-        <br>
-        <br>
-        Location:
-        <input name="location" type="Text">
-        <br>
-        <br>
-        Expense Type:
-        <select>
-            <option>Automotive</option>
-            <option>Clothing</option>
-            <option>Entertainment</option>
-            <option>Food</option>
-            <option>Fuel</option>
-            <option>Gas</option>
-            <option>Grocery</option>
-            <option>Household</option>
-            <option>Medical</option>
-            <option>Phone</option>
-            <option>Utilities</option>
-        </select>
-        <br>
-        <br>
-        Reason:
-        <input name="reason" type='Text'>
-
-    </form>
-
-    <div class="dropdown">
-        <button onclick="buttonClick(this)" class="dropbtn">Expense/Income</button>
-        <div id="myDropdown" class="dropdown-content">
-            <a href="#">Income</a>
-            <a href="#">Expense</a>
-        </div>
-    </div>
-
-
 </main>
 <footer>
 
