--- a/Hackathon2018/client/views/Analytics.html
+++ b/Hackathon2018/client/views/Analytics.html
@@ -56,7 +56,9 @@
         <br>
         Reason:
         <input name="reason" type='Text'>
+        <br>
 
+        <input style="margin-top: 10px; padding-top: 10px; padding-right: 20px" name="submit" type="submit">
     </form>
 
     <div class="dropdown">
