--- a/Hackathon2018/client/stylesheets/Stylesheet.css
+++ b/Hackathon2018/client/stylesheets/Stylesheet.css
@@ -19,6 +19,7 @@ header.page-header {
 
 main {
     font: 2rem 'Fira Sans',sans-serif;
+    background-color: grey;
 }
 
 /*Dropdown Button */
@@ -88,7 +89,7 @@ li {
 }
 
 li a {
-    display: block;
+    display: inline-block;
     color: white;
     text-align: center;
     padding: 16px 20px;
@@ -99,26 +100,26 @@ li a {
 /* Change the link color to #111 (black) on hover */
 li a:hover {
     background-color: #111;
-}
-#wrap {
-    /* Your styling. */
-    position: absolute;
-    z-index: 999999;
-    right: 50%;
-    height: 60%;
-    text-align: center;
-
-    /* Solution part I. */
-    display: table;
+    color: white;
 }
 
-/* Solution part II. */
-#inside {
-    width: 100%;
-    height: 100%;
-    display: table-cell;
-    vertical-align: middle;
-}
 .submit-button {
-    margin-top: 
+    margin-top: 30px;
+    background-color: #333333;
+    color: #ddd;
+    padding: 10px 60px;
+    text-align: center;
+    display: inline-block;
+    font-size: 40px;
+}
+.select-list {
+    margin-top: 30px;
+    padding: 8px 40px;
+    font-size: 25px;
+    text-align: center;
+}
+.textentry {
+    margin-top: 30px;
+    padding: 8px 40px;
+    font-size: 20px;
 }
