--- a/Hackathon2018/client/views/Transactions.html
+++ b/Hackathon2018/client/views/Transactions.html
@@ -5,10 +5,10 @@
 
 <header class="page-header">
     <div id="wrap">
-        <div id = "inside">
-        <h1 class="center">
-            B - Cubed!
-        </h1>
+        <div id="inside">
+            <h1 class="center">
+                B - Cubed!
+            </h1>
         </div>
     </div>
 
@@ -23,23 +23,20 @@
     <br>
     <br>
     <form>
-        Income/Expense
-        <select>
-            <option>Income</option>
-            <option>Expense</option>
+        Income/Expense:
+        <select class="select-list">
+            <option name="Income">Income</option>
+            <option name="Expense">Expense</option>
         </select>
         <br>
-        <br>
         Amount:
-        <input name="Amount" type="Text">
-        <br>
+        <input class="textentry" name="Amount" type="Text">
         <br>
         Location:
-        <input name="location" type="Text">
-        <br>
+        <input class="textentry" name="location" type="Text">
         <br>
         Expense Type:
-        <select>
+        <select class="select-list">
             <option>Automotive</option>
             <option>Clothing</option>
             <option>Entertainment</option>
@@ -53,10 +50,11 @@
             <option>Utilities</option>
         </select>
         <br>
-        <br>
         Reason:
-        <input name="reason" type='Text'>
+        <input class="textentry" name="reason" type='Text'>
+        <br>
 
+        <input class="submit-button" name="submit" type="submit">
     </form>
 
     <div class="dropdown">
