--- a/Hackathon2018/client/views/Index.html
+++ b/Hackathon2018/client/views/Index.html
@@ -1,14 +1,18 @@
+<html>
+
 <head>
     <link rel="Stylesheet" href="../stylesheets/Stylesheet.css">
     <script type="text/javascript" src="../javascripts/DropDown.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
 
 <header class="page-header">
     <div id="wrap">
-        <div id = "inside">
-        <h1 class="center">
-            B - Cubed!
-        </h1>
+        <div id="inside">
+            <h1 class="center">
+                B - Cubed!
+            </h1>
         </div>
     </div>
 
@@ -24,3 +28,9 @@
 <footer>
 
 </footer>
+<script src="//code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.6/angular.min.js"></script>
+<script src="javascripts/app.js"></script>
+
+</html>
