--- a/Hackathon2018/client/views/Transactions.html
+++ b/Hackathon2018/client/views/Transactions.html
@@ -1,62 +1,69 @@
 <head>
     <link rel="Stylesheet" href="../stylesheets/Stylesheet.css">
     <script type="text/javascript" src="../javascripts/DropDown.js"></script>
+    <script type="text/javascript" src="../javascripts/transactions.js"></script>
 </head>
 
 <header class="page-header">
     <div id="wrap">
-        <div id = "inside">
-        <h1 class="center">
-            B - Cubed!
-        </h1>
+        <div id="inside">
+            <h1 class="center">
+                B - Cubed!
+            </h1>
         </div>
     </div>
 
 </header>
-<main>
+<main ng-app="transactions" ng-controller="mainController">
+    <div ng-view id="main"></div>
+    <script src="lib/angular/angular.js"></script>
+    <script scr="lib/angular-route/angular-route.js"></script>
+    <script src="./app.js"></script>
     <ul>
         <li><a href="Index.html">Home</a></li>
-        <li><a class="active" href="Transactions.html">Transactions</a></li>
+        <li><a href="Transactions.html">Transactions</a></li>
         <li><a href="Data.html">Data</a></li>
-        <li><a href="Analytics.html">Analytics</a></li>
+        <li><a class="active" href="Analytics.html">Analytics</a></li>
     </ul>
     <br>
     <br>
     <form>
         Income/Expense
-        <select>
-            <option>Income</option>
-            <option>Expense</option>
+        <select name="type" ng-model="formData.type">
+            <option value="Income">Income</option>
+            <option value="Expense">Expense</option>
         </select>
         <br>
         <br>
         Amount:
-        <input name="Amount" type="Text">
+        <input name="Amount" type="Text" placeholder="Enter text..." ng-model="formData.amount">
         <br>
         <br>
         Location:
-        <input name="location" type="Text">
+        <input name="location" type="Text" placeholder="Enter text..." ng-model="formData.location">
         <br>
         <br>
         Expense Type:
-        <select>
-            <option>Automotive</option>
-            <option>Clothing</option>
-            <option>Entertainment</option>
-            <option>Food</option>
-            <option>Fuel</option>
-            <option>Gas</option>
-            <option>Grocery</option>
-            <option>Household</option>
-            <option>Medical</option>
-            <option>Phone</option>
-            <option>Utilities</option>
+        <select name="subType" ng-model="formData.subType">
+            <option value="Automotive">Automotive</option>
+            <option value="Clothing">Clothing</option>
+            <option value="Entertainment">Entertainment</option>
+            <option value="Food">Food</option>
+            <option value="Fuel">Fuel</option>
+            <option value="Gas">Gas</option>
+            <option value="Grocery">Grocery</option>
+            <option value="Household">Household</option>
+            <option value="Medical">Medical</option>
+            <option value="Phone">Phone</option>
+            <option value="Utilities">Utilities</option>
         </select>
         <br>
         <br>
         Reason:
-        <input name="reason" type='Text'>
+        <input name="reason" type="text" class="form-control input-lg" placeholder="Describe need for purchase" ng-model="formData.reason">
+        <br>
 
+        <input name="submit" type="submit" ng-click="createExpense()">
     </form>
 
     <div class="dropdown">
