--- a/Hackathon2018/client/stylesheets/Stylesheet.css
+++ b/Hackathon2018/client/stylesheets/Stylesheet.css
@@ -123,3 +123,11 @@ li a:hover {
     padding: 8px 40px;
     font-size: 20px;
 }
+.wrapper {
+    text-align: center;
+}
+
+.button {
+    position: absolute;
+    top: 50%;
+}
