--- a/Hackathon2018/client/views/Index.html
+++ b/Hackathon2018/client/views/Index.html
@@ -2,57 +2,67 @@
     <link rel="Stylesheet" href="../stylesheets/Stylesheet.css">
     <script type="text/javascript" src="../javascripts/DropDown.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  <script type="text/javascript">
-    google.charts.load('current', {'packages':['gauge']});
-    google.charts.setOnLoadCallback(drawGauge);
+    <script type="text/javascript">
+        google.charts.load('current', { 'packages': ['gauge'] });
+        google.charts.setOnLoadCallback(drawGauge);
 
-    var gaugeOptions = {min: 0, max: 280, yellowFrom: 100, yellowTo: 200,
-      redFrom: 0, redTo: 100,greenFrom:200,greenTo:280, minorTicks: 5};
-    var gauge;
+        var gaugeOptions = {
+            min: 0, max: 280, yellowFrom: 100, yellowTo: 200,
+            redFrom: 0, redTo: 100, greenFrom: 200, greenTo: 280, minorTicks: 5
+        };
+        var gauge;
 
-    function drawGauge() {
-      gaugeData = new google.visualization.DataTable();
-      gaugeData.addColumn('number', 'Income');
-      gaugeData.addColumn('number', 'Expenditures');
-      gaugeData.addColumn('number', 'me too!');
-      gaugeData.addRows(3);
-      gaugeData.setCell(0, 0, 120);
-      gaugeData.setCell(0, 1, 80);
-      gaugeData.setCell(0,2,70);
+        function drawGauge() {
+            gaugeData = new google.visualization.DataTable();
+            gaugeData.addColumn('number', 'Income');
+            gaugeData.addColumn('number', 'Expenditures');
+            gaugeData.addColumn('number', 'Savings');
+            gaugeData.addRows(3);
+            gaugeData.setCell(0, 0, 120);
+            gaugeData.setCell(0, 1, 80);
+            gaugeData.setCell(0, 2, 90);
 
-      gauge = new google.visualization.Gauge(document.getElementById('gauge_div'));
-      gauge.draw(gaugeData, gaugeOptions);
-    }
+            gauge = new google.visualization.Gauge(document.getElementById('gauge_div'));
+            gauge.draw(gaugeData, gaugeOptions);
+        }
 
-    function changeTemp(dir) {
-      gaugeData.setValue(0, 0, gaugeData.getValue(0, 0) + dir * 25);
-      gaugeData.setValue(0, 1, gaugeData.getValue(0, 1) + dir * 20);
-      gaugeData.setValue(0, 2, gaugeData.getValue(0, 1) + dir * 20);
-      gauge.draw(gaugeData, gaugeOptions);
-    }
-  </script>
+        function changeTemp(dir) {
+            gaugeData.setValue(0, 0, gaugeData.getValue(0, 0) + dir * 25);
+            gaugeData.setValue(0, 1, gaugeData.getValue(0, 1) + dir * 10);
+            gaugeData.setValue(0, 2, gaugeData.getValue(0, 2) + dir * 25);
+            gauge.draw(gaugeData, gaugeOptions);
+        }
+    </script>
+
 </head>
 
 <header class="page-header">
-    <div id="wrap">
-        <div id = "inside">
+    <div class="wrapper">
         <h1 class="center">
             B - Cubed!
         </h1>
-        </div>
     </div>
 
 </header>
 <main>
+
     <ul>
         <li><a class="active" href="Index.html">Home</a></li>
         <li><a href="Transactions.html">Transactions</a></li>
         <li><a href="Data.html">Data</a></li>
         <li><a href="Analytics.html">Analytics</a></li>
     </ul>
-    <div id="gauge_div" style="width: 1000px; height: 200px;"></div>
+
+    <div class="wrapper">
+        <form method="GET" action="Transactions.html">
+            <button class="submit-button" type="submit">New Transaction</button>
+        </form>
+    </div>
+
+    <div id="gauge_div" style="width: 750px; height: 250px;"></div>
     <input type="button" value="Go Faster" onclick="changeTemp(1)" />
     <input type="button" value="Slow down" onclick="changeTemp(-1)" />
+    <br>
 </main>
 <footer>
 
