--- a/Hackathon2018/client/views/Transactions.html
+++ b/Hackathon2018/client/views/Transactions.html
@@ -21,9 +21,9 @@
     <script src="./app.js"></script>
     <ul>
         <li><a href="Index.html">Home</a></li>
-        <li><a href="Transactions.html">Transactions</a></li>
+        <li><a class="active" href="Transactions.html">Transactions</a></li>
         <li><a href="Data.html">Data</a></li>
-        <li><a class="active" href="Analytics.html">Analytics</a></li>
+        <li><a href="Analytics.html">Analytics</a></li>
     </ul>
     <br>
     <br>
@@ -35,15 +35,13 @@
         </select>
         <br>
         Amount:
-        <input name="Amount" type="Text" placeholder="Enter text..." ng-model="formData.amount">
-        <br>
+        <input class="textentry" name="Amount" type="Text" placeholder="Enter text..." ng-model="formData.amount">
         <br>
         Location:
-        <input name="location" type="Text" placeholder="Enter text..." ng-model="formData.location">
-        <br>
+        <input class="textentry" name="location" type="Text" placeholder="Enter text..." ng-model="formData.location">
         <br>
         Expense Type:
-        <select name="subType" ng-model="formData.subType">
+        <select class="select-list" name="subType" ng-model="formData.subType">
             <option value="Automotive">Automotive</option>
             <option value="Clothing">Clothing</option>
             <option value="Entertainment">Entertainment</option>
@@ -58,7 +56,7 @@
         </select>
         <br>
         Reason:
-        <input name="reason" type="text" class="form-control input-lg" placeholder="Describe need for purchase" ng-model="formData.reason">
+        <input class="textentry" name="reason" type="text" class="form-control input-lg" placeholder="Describe need for purchase" ng-model="formData.reason">
         <br>
 
         <input class="submit-button" name="submit" type="submit" ng-click="createExpense()">
